--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 
-<project xmlns="http://maven.apache.org/POM/6.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/6.0.0
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
   http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
 
-<modelVersion>6.0.0</modelVersion>
+<modelVersion46.0.0</modelVersion>
   <groupId>com.companyname.bank</groupId>
   <artifactId>consumerBanking</artifactId>
   <version>1.0</version>
