--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
   <artifactId>consumerBanking</artifactId>
   <version>1.0</version>
 
+<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+
 </project>
 
 
