--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
 
-<modelVersion46.0.0</modelVersion>
+<modelVersion>4.0.0</modelVersion>
   <groupId>com.companyname.bank</groupId>
   <artifactId>consumerBanking</artifactId>
   <version>1.0</version>
@@ -14,8 +14,4 @@
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
 </properties>
-
 </project>
-
-
-
